--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/wordpress/index.html">
-bruh
+<meta http-equiv="refresh" content="0; url=https://repo.amoggus.io/wordpress/index.html">
